--- a/spring_crud_exc5_name/src/main/resources/static/css/stylesheet.css
+++ b/spring_crud_exc5_name/src/main/resources/static/css/stylesheet.css
@@ -9,30 +9,147 @@ body {
 
 /* ---- ページタイトル ---- */
 h3 {
-	padding-left: 20px;
+  font-weight: bold;
+  border-bottom: 3px solid #D9E9CF;
+  padding: 0.3em;
+  margin-bottom: 0.3em;
+  position: relative;
+}
+h3::after {
+  content: '';
+  background-color: #5C715E;
+  width: 2em;
+  height: 3px;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  z-index: 1;
+}
+
+h2 {
+  font-weight: bold;
+  border-bottom: 3px solid #D9E9CF;
+  padding: 0.3em;
+  margin-bottom: 0.3em;
+  position: relative;
+}
+
+h2::after {
+  content: '';
+  background-color: #5C715E;
+  width: 2em;
+  height: 3px;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  z-index: 1;
 }
 
 /* ---- 社員登録入力画面へのリンク ---- */
 div.regist_link {
 	padding-right: 35px;
-	padding-bottom: 10px;
+	padding-bottom: 15px;
+	padding-top: 15px;
 	text-align: right;
+	text-decoration: underline;
+	text-underline-offset: 5px;
+	font-weight: bolder;
+}
+
+div.regist_link a {
+	position: relative;
+	color: #5D688A;
+	text-decoration: none;
+}
+
+div.regist_link a:hover {
+	color: #124170;
+}
+
+div.regist_link a::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 0;
+	height: 10px;
+	background-color: rgba(92, 113, 94, 0.7);
+	transition: width 0.3s;
+}
+
+div.regist_link a:hover::after {
+	width: 100%;
+}
+
+div.back_to_top_link {
+	padding-right: 35px;
+	padding-bottom: 10px;
+	text-align: center;
+	text-decoration: underline;
+	text-underline-offset: 5px;
+	font-weight: bolder;
+}
+
+div.back_to_top_link a {
+	position: relative;
+	color: #5D688A;
+	text-decoration: none;
+}
+
+div.back_to_top_link a:hover {
+	color: #124170;
+}
+
+div.back_to_top_link a::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 0;
+	height: 10px;
+	background-color: rgba(92, 113, 94, 0.7);
+	transition: width 0.3s;
+}
+
+div.back_to_top_link a:hover::after {
+	width: 100%;
 }
 
 /* ---- 社員情報一覧テーブル ---- */
 table {
 	background-color: #FFFFFF;
-	border-color: #87CEEB;
-	border-width: 1px;
-	border-style: solid;
 	border-collapse: collapse;
-	margin: 0px auto 20px;
+	margin: 0 auto 20px;
+	width: 100%;
+	table-layout: fixed;
 }
 
-table td, table th {
-	border-width: 1px;
-	border-style: solid;
-	border-color: #87CEEB;
+table td,
+table th {
+	border: 1px solid #8AAE92;
+	white-space: nowrap;
+	text-align: center;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.table-scroll {
+	position: relative;
+	max-height: 300px; 
+	overflow-y: auto;
+	border-top: 2px solid #8AAE92;
+}
+
+thead th {
+	position: sticky;
+	top: 0;
+	background-color: #D9E9CF;
+	z-index: 2;
+	height: 40px;
+}
+
+td {
+	height: 50px;
 }
 
 td.data {
@@ -40,11 +157,11 @@ td.data {
 }
 
 th.empId {
-	width: 60px;
+	width: 55px;
 }
 
 th.empName {
-	width: 80px;
+	width: 90px;
 }
 
 th.gender {
@@ -75,8 +192,52 @@ td.button {
 	text-align: center;
 }
 
-table td {
-	padding-left: 5px;
+.allList{
+	text-align: right;
+	margin-right: 20px;
+	margin-top: 20px;
+	text-decoration: underline;
+	text-underline-offset: 5px;
+	font-weight: bolder;
+}
+
+div.allList a {
+	position: relative;
+	color: #5D688A;
+	text-decoration: none;
+}
+
+div.allList a:hover {
+	color: #124170;
+}
+
+div.allList a::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 0;
+	height: 10px;
+	background-color: rgba(92, 113, 94, 0.7);
+	transition: width 0.3s;
+}
+
+div.allList a:hover::after {
+	width: 100%;
+}
+
+.listSize{
+	margin-right: 20px;
+	margin-bottom: 0px;
+}
+
+.listSize p{
+	margin-bottom: 5px;
+}
+
+.head{
+	display: flex;
+	justify-content: space-between;
 }
 
 /* ---- 入力フォーム(検索、登録、変更、削除) ---- */
@@ -103,7 +264,7 @@ div.input {
 	width: 470px;
 	height: 35px;
 	text-align: left;
-	
+
 }
 
 select {
@@ -111,26 +272,84 @@ select {
 	color: #12526d;
 }
 
+.complete_link {
+	padding-right: 35px;
+	padding-bottom: 15px;
+	padding-top: 15px;
+	text-align: center;
+	text-decoration: underline;
+	text-underline-offset: 5px;
+	font-weight: bolder;
+}
+
+.complete_link a {
+	position: relative;
+	color: #5D688A;
+	text-decoration: none;
+}
+
+.complete_link a:hover {
+	color: #124170;
+}
+
+.complete_link a::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 0;
+	height: 10px;
+	background-color: rgba(92, 113, 94, 0.7);
+	transition: width 0.3s;
+}
+
+.complete_link a:hover::after {
+	width: 100%;
+}
+
+disabled-radio {
+    color: #999;       /* 薄いグレー */
+    cursor: not-allowed;
+}
+.disabled-radio input {
+    cursor: not-allowed;
+}
+
 /* ---- 入力フォーム(ログイン) ---- */
 
-.login_form{
+.login_form {
 	display: flex;
+	margin-bottom: 15px;
 }
-div.login_label {
 
+div.login_label {
 	width: 305px;
 	height: 35px;
 	padding-right: 5px;
 	text-align: right;
+	line-height: 35px;
 }
 
 div.login_input {
-	
 	width: 410px;
 	height: 35px;
 	text-align: left;
+	position: relative;
 }
- 
+
+div.log{
+	margin-left: 45px;
+}
+
+.eye-icon{
+	position: absolute;
+/*	right: 5px;*/
+	top: 45%;
+	transform: translateY(-50%);
+	cursor: pointer;
+	width: 20px;
+	height: 20px;
+}
 
 /* ---- 処理完了メッセージの出力箇所 ---- */
 div.message {
@@ -149,6 +368,21 @@ input[type=submit] {
 	color: #12526d;
 }
 
+/*マウスをのせたとき*/
+input[type=submit]:hover {
+	transform: translateY(-3px);
+	background-color: #5C715E;
+	color: #ffffff;
+}
+
+/*クリックしたとき*/
+input[type=submit]:active {
+	transform: translateY(1px);
+	background-color: #1C352D;
+}
+
+
+
 /* ---- エラーメッセージ ---- */
 .error {
 	color: #FF0000;
@@ -157,4 +391,3 @@ input[type=submit] {
 .warning {
 	color: #FF0000;
 }
-
