--- a/spring_crud_exc5_name/src/main/resources/templates/delete/delete_check.html
+++ b/spring_crud_exc5_name/src/main/resources/templates/delete/delete_check.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{common/layout_4block :: layout(~{::body/content()})}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{common/layout_4block :: layout(~{::body/content()}, ~{::head/script})}">
 
 <head>
 	<title>社員削除確認 | 社員管理システム</title>
 	<meta charset="UTF-8" />
+	<script th:src="@{/js/spring_crud.js}" type="text/javascript"></script>
 </head>
 
 <body class="admin user_delete_check_admin">
