--- a/spring_crud_exc5_name/src/main/resources/templates/index.html
+++ b/spring_crud_exc5_name/src/main/resources/templates/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{common/layout_3block :: layout(~{::body/content()})}">
+<html xmlns:th="http://www.thymeleaf.org"
+	th:replace="~{common/layout_3block :: layout(~{::body/content()}, ~{::head/script})}">
 
 <head>
 	<title>ログイン | 社員管理システム</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script th:src="@{/js/spring_crud.js}" type="text/javascript"></script>
 </head>
 
 <body>
@@ -30,13 +32,15 @@
 					<div class="login_form">
 						<div class="login_label">パスワード</div>
 						<div class="login_input">
-							<input type="password" th:field="*{empPass}" />
+							<input type="password" th:field="*{empPass}" id="empPass"/>
+							<img th:src="@{/images/visibility_off.png}" alt="目のアイコン" id="togglePass" class="eye-icon">
 						</div>
 					</div>
 					<div class="login_form">
 						<div class="login_label"></div>
-						<div class="login_input">
+						<div class="login_input log">
 							<input type="submit" value="ログイン" />
+							</a>
 						</div>
 					</div>
 				</form>
