--- a/spring_crud_exc5_name/src/main/resources/templates/regist/regist_check.html
+++ b/spring_crud_exc5_name/src/main/resources/templates/regist/regist_check.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{common/layout_4block :: layout(~{::body/content()})}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{common/layout_4block :: layout(~{::body/content()}, ~{::head/script})}">
 <head>
 <title>会員登録確認 | シェアードショップ</title>
 <meta charset="UTF-8" />
+	<script th:src="@{/js/spring_crud.js}" type="text/javascript"></script>
+
 </head>
 <body class="admin user_regist_check_admin">
 	<h3>社員登録確認画面</h3>
