--- a/spring_crud_exc5_name/src/main/resources/templates/update/update_input.html
+++ b/spring_crud_exc5_name/src/main/resources/templates/update/update_input.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{common/layout_4block :: layout(~{::body/content()})}">
+<html xmlns:th="http://www.thymeleaf.org"
+	th:replace="~{common/layout_4block :: layout(~{::body/content()}, ~{::head/script})}">
 
 <head>
 	<title>会員変更入力 | シェアードショップ</title>
 	<meta charset="UTF-8" />
+	<script th:src="@{/js/spring_crud.js}" type="text/javascript"></script>
 </head>
 
 <body th:object="${userForm}" class="admin user_update_input_admin">
@@ -56,8 +58,13 @@
 			<div class="form">
 				<div class="label">権限：</div>
 				<div class="input">
-					<input type="radio" th:field="*{authority}" value="1" />一般&nbsp;&nbsp;
-					<input type="radio" th:field="*{authority}" value="2" />管理者
+					<label th:classappend="${session.loginUser.authority != 2} ? 'disabled-radio'">
+						<input type="radio" th:field="*{authority}" value="1" th:disabled="${session.loginUser.authority != 2}"/>一般
+					</label>
+					&nbsp;&nbsp;
+					<label th:classappend="${session.loginUser.authority != 2} ? 'disabled-radio'">
+						<input type="radio" th:field="*{authority}" value="2" th:disabled="${session.loginUser.authority != 2}"/>管理者
+					</label>
 				</div>
 			</div>
 
