ログインバリデーション01

--- a/spring_crud_exc5_name/src/main/resources/templates/index.html
+++ b/spring_crud_exc5_name/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
 						<div class="login_label">パスワード</div>
 						<div class="login_input">
 							<input type="password" th:field="*{empPass}" id="empPass"/>
-							<img th:src="@{/images/visibility_off.png}" alt="目のアイコン" id="togglePass" class="eye-icon">
+							<div><img th:src="@{/images/visibility_off.png}" alt="目のアイコン" id="togglePass" class="eye-icon"></div>
 						</div>
 					</div>
 					<div class="login_form">
