--- a/spring_crud_exc5_name/src/main/resources/static/css/stylesheet.css
+++ b/spring_crud_exc5_name/src/main/resources/static/css/stylesheet.css
@@ -343,12 +343,12 @@ div.log{
 
 .eye-icon{
 	position: absolute;
-/*	right: 5px;*/
 	top: 45%;
 	transform: translateY(-50%);
 	cursor: pointer;
 	width: 20px;
 	height: 20px;
+	margin-left: 145px;
 }
 
 /* ---- 処理完了メッセージの出力箇所 ---- */
