検索結果件数表示機能

--- a/spring_crud_exc5_name/src/main/resources/static/css/layout.css
+++ b/spring_crud_exc5_name/src/main/resources/static/css/layout.css
@@ -18,13 +18,13 @@ body {
 }
 
 .login {
-	width: 100%;
+	max-width: 100%;
 }
 
 /* ---- ヘッダー ---- */
 header {
 	height: 80px;
-	width: 100%;
+	max-width: 100%;
 	background-color: #B6CDBD;
 	padding-top: 10px;
 }
